--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "css-loader": "4.3.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -70,7 +69,6 @@
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
-    "typescript": "^4.1.2",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
     "webpack": "4.44.2",
@@ -159,6 +157,9 @@
     ]
   },
   "devDependencies": {
-    "@types/mjml-react": "^2.0.0"
+    "@rushstack/eslint-config": "^2.4.3",
+    "@types/mjml-react": "^2.0.0",
+    "eslint": "^7.20.0",
+    "typescript": "^4.4.4"
   }
 }
